--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "better-sqlite3": "^8.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
