--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riseact-node-sdk",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Riseact SDK for Nodejs",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -11,7 +11,7 @@
     "lib/**/*"
   ],
   "repository": "https://github.com/riseact/riseact-node-sdk",
-  "author": "Metadonors",
+  "author": "Riseact",
   "license": "MIT",
   "scripts": {
     "build": "rm -rf ./lib/* && concurrently \"npm run build:cjs \" \"npm run build:esm \"",
