--- a/package.json
+++ b/package.json
@@ -27,21 +27,22 @@
     "ts-guard": "ts-auto-guard ./src/types.ts && eslint --fix ./src/types.guard.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.7",
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "better-sqlite3": "^8.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "graphql": "^16.6.0",
-    "http-proxy-middleware": "^2.0.6",
     "openid-client": "^5.4.0",
-    "uuidv4": "^6.2.13"
+    "uuidv4": "^6.2.13",
+    "http-proxy-middleware": "^2.0.6",
+    "vite": "^4.1.1",
+    "better-sqlite3": "^8.1.0",
+    "graphql": "^16.6.0",
+    "@apollo/client": "^3.7.7"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.3",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.5",
