--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
     "esModuleInterop": true,
     "moduleResolution": "node"
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "types.d.ts"],
   "exclude": ["node_modules",]
 }
