--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.7",
+    "apollo-upload-client": "^17.0.0",
     "better-sqlite3": "^8.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
@@ -42,6 +43,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/apollo-upload-client": "^17.0.2",
     "@types/better-sqlite3": "^7.6.3",
     "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.17",
