--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riseact/riseact-node-sdk",
-  "version": "3.1.0",
+  "version": "3.1.1",
   "description": "Riseact SDK for Nodejs",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -26,37 +26,42 @@
     "upgrade-minors": "ncu -u --target minor",
     "ts-guard": "ts-auto-guard ./src/types.ts && eslint --fix ./src/types.guard.ts"
   },
+  "peerDependencies": {
+    "@apollo/client": "^3.7",
+    "better-sqlite3": "^8.1",
+    "express": "^4.18",
+    "graphql": "^16.6"
+  },
   "dependencies": {
-    "@apollo/client": "^3.7.7",
     "apollo-upload-client": "^17.0.0",
-    "better-sqlite3": "^8.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
-    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "graphql": "^16.6.0",
     "http-proxy-middleware": "^2.0.6",
     "openid-client": "^5.4.0",
     "uuid": "^9.0.0",
     "vite": "^4.1.1"
   },
   "devDependencies": {
-    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
-    "@types/apollo-upload-client": "^17.0.2",
-    "@types/better-sqlite3": "^7.6.3",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/express-session": "^1.17.5",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "concurrently": "^7.6.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
-    "prettier": "^2.8.4",
-    "typescript": "^4.9.5"
+    "@apollo/client": "3.7.7",
+    "@trivago/prettier-plugin-sort-imports": "4.0.0",
+    "@types/apollo-upload-client": "17.0.2",
+    "@types/better-sqlite3": "7.6.3",
+    "@types/cookie-parser": "1.4.3",
+    "@types/express": "4.17.17",
+    "@types/express-session": "1.17.5",
+    "@types/uuid": "9.0.0",
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "5.51.0",
+    "better-sqlite3": "8.1.0",
+    "concurrently": "7.6.0",
+    "eslint": "8.33.0",
+    "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "eslint-plugin-unused-imports": "2.0.0",
+    "graphql": "16.6.0",
+    "prettier": "2.8.4",
+    "typescript": "^5.3.3"
   }
 }
