--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
   // Enable/disable default JavaScript formatter (For Prettier)
   "editor.formatOnSave": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true,
-    "source.organizeImports": false,
+    "source.fixAll.eslint": "explicit",
+    "source.organizeImports": "never"
   },
   // Hide node_modules and .devbuild folders from the explorer
   "files.exclude": {
