--- a/.github/workflows/publish-dryrun.yml
+++ b/.github/workflows/publish-dryrun.yml
@@ -8,13 +8,17 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
+    defaults:
+      run:
+        working-directory: ./sdk
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18.x'
+          node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: cd sdk
       - run: npm install
       - run: npm run build
       - run: npm publish --dry-run
