--- a/sdk/package.json
+++ b/sdk/package.json
@@ -8,7 +8,7 @@
   "sideEffects": false,
   "types": "./lib/esm/index.d.ts",
   "engines": {
-    "node": ">=18"
+    "node": ">=20.19.0"
   },
   "files": [
     "lib/**/*"
@@ -33,18 +33,25 @@
     "express": "^4.18"
   },
   "devDependencies": {
-    "express": "^4.18"
+    "@types/cookie-parser": "^1.4.6",
+    "@types/uuid": "^9.0.1",
+    "concurrently": "7.6.0",
+    "cors": "^2.8.5",
+    "express": "^4.18",
+    "tsc-alias": "^1.8.8",
+    "typescript": "^5.3.3",
+    "vite": "^5"
   },
   "dependencies": {
-    "graphql": "^16.6",
     "@apollo/client": "^3.7",
+    "@types/cors": "^2.8.16",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "cross-fetch": "^3.1.5",
     "express-session": "^1.17.3",
+    "graphql": "^16.6",
     "http-proxy-middleware": "^2.0.6",
     "openid-client": "^5.4.0",
-    "uuid": "^9.0.0",
-    "vite": "^4.1.1"
+    "uuid": "^9.0.0"
   }
 }
