--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,18 +9,28 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: ./sdk
-
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
           node-version: '20.x'
           registry-url: 'https://registry.npmjs.org'
-      - run: npm install
-      - run: npm run
-      - run: npm publish --access public
+
+      - name: Install dependencies
+        working-directory: ./sdk
+        run: npm install
+
+      - name: Build package
+        working-directory: ./sdk
+        run: npm run build
+
+      - name: Copy documentation files
+        run: |
+          cp README.md sdk/README.md
+          cp LICENSE sdk/LICENSE
+
+      - name: Publish to npm
+        working-directory: ./sdk
+        run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
