--- a/sdk/package.json
+++ b/sdk/package.json
@@ -36,13 +36,14 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/node": "20",
     "@types/uuid": "^9.0.1",
     "concurrently": "7.6.0",
     "cors": "^2.8.5",
     "express": "^4.18",
     "tsc-alias": "^1.8.8",
-    "typescript": "^5.3.3",
-    "vite": "^5"
+    "typescript": "^5.4.5",
+    "vite": "4"
   },
   "dependencies": {
     "@apollo/client": "^3.7",
