--- a/sdk/package.json
+++ b/sdk/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@riseact/riseact-node-sdk",
-  "version": "6.0.1",
+  "version": "6.0.2",
   "description": "Riseact SDK for Nodejs",
   "main": "lib/cjs/index.js",
   "module": "lib/esm/index.js",
@@ -37,7 +37,9 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.6",
+    "@types/lru-cache": "^7.10.10",
     "@types/node": "20",
+    "@types/openid-client": "^3.7.0",
     "@types/uuid": "^9.0.1",
     "concurrently": "7.6.0",
     "cors": "^2.8.5",
